--- a/site.html
+++ b/site.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>Mirantis Application</title>
+  <title>Mirantis Application2</title>
   <style>
    body{
     background-color: red;
