--- a/site.html
+++ b/site.html
@@ -5,7 +5,7 @@
   <title>Mirantis Application2</title>
   <style>
    body{
-    background-color: red;
+    background-color: blue;
    }
   </style>
  </head>
